# normality

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.config/: nextest.toml
.github/workflows/: base_benchmarks.yml  ci.yml  fork_pr_benchmarks_closed.yml  fork_pr_benchmarks_run.yml  fork_pr_benchmarks_track.yml  lint.yml  paper.yml  pr_benchmarks.yml  pr_benchmarks_closed.yml  pr_benchmarks_track.yml  release.yml
benches/: bench.rs
paper/: paper.bib  paper.md
src/: error.rs  lib.rs  macros.rs
src/methods/: anderson_darling.rs  anscombe_glynn.rs  dagostino_k_squared.rs  jarque_bera.rs  lilliefors.rs  mod.rs  pearson_chi_squared.rs
src/methods/energy_test/: imhof.rs  mod.rs
src/methods/multivariate/: henze_wagner.rs  henze_zirkler.rs  mardia.rs  mod.rs  pudelko.rs  royston.rs  szekely_rizzo.rs
src/methods/shapiro_wilk/: mod.rs  swilk.rs
tests/: accuracy.rs  multivariate_accuracy.rs
