[package]
name = "normality"
version = "1.1.0"
description = "A Rust crate for assessing the normality of a data sample."
edition = "2024"
rust-version = "1.87.0"
repository = "https://github.com/jzeuzs/normality"
license = "MIT"
keywords = ["statistics", "normality", "normality-test", "hypothesis-testing"]
categories = ["algorithms", "mathematics"]

[dependencies]
ndarray = "0.17.0"
num-traits = "0.2.19"
statrs = "0.18.0"
thiserror = "2.0.17"

[dev-dependencies]
assert_float_eq = "1.2.0"
gungraun = "0.17.0"
indoc = "2.0.6"
nanoid = "0.4.0"
pastey = "0.1.1"
rand = "=0.8"
statrs = "0.18.0"
tempfile = "3.23.0"

[[bench]]
name = "bench"
harness = false
