[package]
name = "normality"
version = "3.0.1"
description = "A Rust crate for assessing the normality of a data sample."
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/jzeuzs/normality"
license = "MIT"
keywords = ["statistics", "normality", "normality-test", "hypothesis-testing"]
categories = ["algorithms", "mathematics"]

[dependencies]
eqsolver = "0.4.0"
nalgebra = "0.34.1"
ndarray = "0.17.0"
num-complex = "0.4.6"
num-traits = "0.2.19"
rand = "=0.8"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
statrs = "0.18.0"
thiserror = "2.0.17"
xsf = "0.5.0"

[dev-dependencies]
assert_float_eq = "1.2.0"
indoc = "2.0.6"
nanoid = "0.5.0"
pastey = "0.2.0"
serde_test = "1.0.177"
statrs = "0.18.0"
tempfile = "3.23.0"

[features]
parallel = ["dep:rayon"]
serde = ["dep:serde"]
